2013-04-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/mm.c (grub_mm_init_region): Fix condition for
	detecting too small regions.

2013-04-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/Makefile.core.def (legacycfg): Enable on EFI.

2013-04-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/efi/relocator.c (grub_relocator_firmware_alloc_region):
	Remove dprintf.
	* grub-core/lib/relocator.c (malloc_in_range): Likewise.

2013-04-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/ieee1275/init.c (grub_claim_heap): Improve handling
	of GRUB_IEEE1275_FLAG_FORCE_CLAIM.
	* grub-core/loader/powerpc/ieee1275/linux.c
	(grub_linux_claimmap_iterate): Handle GRUB_IEEE1275_FLAG_FORCE_CLAIM.

2013-04-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/ieee1275/cmain.c (grub_ieee1275_find_options):
	Look for /boot-rom as well as /rom/boot-rom.

2013-04-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/videotest.c (grub_cmd_videotest): Fix error
	handling when creating text_layer failed.
	* grub-core/video/video.c (grub_video_create_render_target):
	Set result to 0 on error.
	(grub_video_delete_render_target): Do not dereference NULL.

2013-04-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/elfXX.c (grub_elfXX_load): Handle
	GRUB_ELF_LOAD_FLAGS_30BITS and GRUB_ELF_LOAD_FLAGS_62BITS.
	* grub-core/loader/powerpc/ieee1275/linux.c (grub_linux_load32),
	(grub_linux_load64): Mask out 2 high bits.

2013-04-19  Andrey Borzenkov <arvidjaar@gmail.com>

	* util/grub.d/30_os-prober.in: Add onstr to linux entries in one
	more place.

2013-04-19  Vladimir Serbinenko  <phcoder@gmail.com>

	Add support for pseries and other bootinfo machines to grub-mkrescue.

	Tested by: Paulo Flabiano Smorigo.

2013-04-17  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in: Add GPT for EFI boot.

2013-04-17  Vladimir Serbinenko  <phcoder@gmail.com>
